--- a/Cliente/Tareas/tarea3/ejercicio1/colegio.html
+++ b/Cliente/Tareas/tarea3/ejercicio1/colegio.html
@@ -30,7 +30,7 @@
             alert("alo");
             
             //var colegio = new Colegio(nombreIES,numeroAulas, numeroAlumno,modificarAlumnos);
-            alert(nombreIES);
+            //alert(nombreIES);
             if ((nombreIES != "") && (numeroAulas != "") && (numeroAlumno != "")) {
                 var tabla = document.getElementById("tablaColegio");
                 var colegio = new Colegio(nombreIES,numeroAulas, numeroAlumno);
