--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -13,7 +13,7 @@
 
     <header>
         <div id="banner">
-            <div id="banIzq">
+            <div id="logo">
                 <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
             </div>
             <div id="nombreGim">
@@ -25,7 +25,7 @@
 
     <div id="logNav">
         <div id="login">
-            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"></a>
+            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
 
         </div>
         <nav>
