--- a/Gimnasio/html/actividadSala.html
+++ b/Gimnasio/html/actividadSala.html
@@ -9,58 +9,98 @@
 </head>
 
 <body onload="horarioSala()" style="width: 1000px;">
+    <header>
+        <div id="banner">
+            <div id="logo">
+                <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
+            </div>
+            <div id="nombreGim">
+                <h1>MUSCLE UP</h1>
+            </div>
 
-    <table border="1" id="tableAct">
-        <tr>
-            <td></td>
-            <td>Lunes</td>
-            <td>Martes</td>
-            <td>Miercoles</td>
-            <td>Jueves</td>
-            <td>Viernes</td>
-            <td>Sabado</td>
-        </tr>
-        <tr id="actividad1">
-            <td>7:00 - 9:00</td>
-        </tr>
-        <tr id="actividad2">
-            <td>9:00 - 11:00</td>
-        </tr>
-        <tr id="actividad3">
-            <td>11:00 - 13:00</td>
-        </tr>
-        <tr id="actividad4">
-            <td>13:00 - 15:00</td>
-        </tr>
-        <tr id="actividad5">
-            <td>15:00 - 17:00</td>
-        </tr>
-        <tr id="actividad6">
-            <td>17:00 - 19:00</td>
-        </tr>
-        <tr id="actividad7">
-            <td>19:00 - 21:00</td>
-        </tr>
-    </table>
-    <br><br>
-    <br><br>
+        </div>
+    </header>
+
+    <div id="logNav">
+        <div id="login">
+            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+
+        </div>
+        <nav>
+            <ul id="navPrin">
+                <li> <a href="../html/home.html">Home</a> </li>
+                <li>Herramientas
+                    <ul id="navTools">
+                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                    </ul>
+                </li>
+                <li><a href="fisioterapeuta.html">Fisios</a></li>
+                <li><a href="actividadSala.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
+    <hr>
+    <a id="back_to_top" class="right on" href="#header">
+        <span class="fa-stack">
+            <span class="arrow_carrot-up"></span>
+        </span>
+    </a>
+
+
     <div>
-
-        <form id="form" name="formAct" style="float: left;">
-            <label for="actividad">ACTIVIDADES</label><br/>
-
-            <!-- var actividad = ["Spining", "Yoga", "Crossfit", "KickBoxing", "Baile de salón", "Kapoeira", "BodyPump"];-->
-            <input type="checkbox" name="actividad" value="Spining">Spining<br/>
-            <input type="checkbox" name="actividad" value="Yoga">Yoga<br/>
-            <input type="checkbox" name="actividad" value="Crossfit">Crossfit<br/>
-            <input type="checkbox" name="actividad" value="KickBoxing">KickBoxing<br/>
-            <input type="checkbox" name="actividad" value="Baile de salón">Baile de salón<br/>
-            <input type="checkbox" name="actividad" value="Kapoeira">Kapoeira<br/>
-            <input type="checkbox" name="actividad" value="BodyPump">BodyPump<br/>
-            <input type="button" id="boton" value="Mostrar" onclick="resAct()">
-        </form>
+        <table border="1" id="tableAct">
+            <tr>
+                <td></td>
+                <td>Lunes</td>
+                <td>Martes</td>
+                <td>Miercoles</td>
+                <td>Jueves</td>
+                <td>Viernes</td>
+                <td>Sabado</td>
+            </tr>
+            <tr id="actividad1">
+                <td>7:00 - 9:00</td>
+            </tr>
+            <tr id="actividad2">
+                <td>9:00 - 11:00</td>
+            </tr>
+            <tr id="actividad3">
+                <td>11:00 - 13:00</td>
+            </tr>
+            <tr id="actividad4">
+                <td>13:00 - 15:00</td>
+            </tr>
+            <tr id="actividad5">
+                <td>15:00 - 17:00</td>
+            </tr>
+            <tr id="actividad6">
+                <td>17:00 - 19:00</td>
+            </tr>
+            <tr id="actividad7">
+                <td>19:00 - 21:00</td>
+            </tr>
+        </table>
         <br><br>
-        
+        <br><br>
+        <div>
+
+            <form id="form" name="formAct" style="float: left;">
+                <label for="actividad">ACTIVIDADES</label><br />
+
+                <!-- var actividad = ["Spining", "Yoga", "Crossfit", "KickBoxing", "Baile de salón", "Kapoeira", "BodyPump"];-->
+                <input type="checkbox" name="actividad" value="Spining">Spining<br />
+                <input type="checkbox" name="actividad" value="Yoga">Yoga<br />
+                <input type="checkbox" name="actividad" value="Crossfit">Crossfit<br />
+                <input type="checkbox" name="actividad" value="KickBoxing">KickBoxing<br />
+                <input type="checkbox" name="actividad" value="Baile de salón">Baile de salón<br />
+                <input type="checkbox" name="actividad" value="Kapoeira">Kapoeira<br />
+                <input type="checkbox" name="actividad" value="BodyPump">BodyPump<br />
+                <input type="button" id="boton" value="Mostrar" onclick="resAct()">
+            </form>
+            <br><br>
+
+        </div>
     </div>
 </body>
 
