--- a/Gimnasio/html/login.html
+++ b/Gimnasio/html/login.html
@@ -3,12 +3,55 @@
 <html lang="es">
 
 <head>
+    <link rel="shortcut icon" href="../recursos/logotipo-brazo-de-gimnasio.png">
     <meta charset="utf-8">
     <title>Password seguro 05</title>
+    <link rel="stylesheet" href="../css/gimstile.css" />
     <script type="text/javascript" src="../js/gimnasio.js"></script>
+
 </head>
 
 <body>
+
+    <header>
+        <div id="banner">
+            <div id="logo">
+                <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
+            </div>
+            <div id="nombreGim">
+                <h1>MUSCLE UP</h1>
+            </div>
+
+        </div>
+    </header>
+
+    <div id="logNav">
+        <div id="login">
+            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+
+        </div>
+        <nav>
+            <ul id="navPrin">
+                <li> <a href="../html/home.html">Home</a> </li>
+                <li>Herramientas
+                    <ul id="navTools">
+                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                    </ul>
+                </li>
+                <li><a href="fisioterapeuta.html">Fisios</a></li>
+                <li><a href="actividadSala.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
+    <hr>
+    <a id="back_to_top" class="right on" href="#header">
+        <span class="fa-stack">
+            <span class="arrow_carrot-up"></span>
+        </span>
+    </a>
+
+
     <h2>Introduzca una contraseña segura</h2>
 
     <label for="pssw">Contraseña:&nbsp;</label>
