--- a/Gimnasio/html/fcmCalculadora.html
+++ b/Gimnasio/html/fcmCalculadora.html
@@ -9,24 +9,64 @@
 </head>
 
 <body>
-    <h1>Calculadora de FCM</h1>
-    <form action="./fcm.js">
-        <label>Edad: </label><input type="number" id="edad" value=""><br>
-        <label>Sexo: </label>
-        <!--<input type="text" id="sexo" value=""> -->
-        <select name="sexo" id="sexo">
-            <option value="Hombre" selected>Hombre</option>
-            <option value="Mujer">Mujer</option>
-        </select>
-        <input type="button" src="fcm.js" onclick="calcularFCM()" value="Enviar">
-    </form>
-    <h2 id="h2"></h2>
-    <ul>
-        <li>Zona de recuperación (60% - 70%) <span id="1"></span></li>
-        <li>Zona de aeróbica (70% - 80%) <span id="2"></span></li>
-        <li>Zona de anaeróbica (80% - 90%) <span id="3"></span></li>
-        <li>Línea roja (90% - 100%) <span id="4"></span></li>
-    </ul>
+    <header>
+        <div id="banner">
+            <div id="logo">
+                <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
+            </div>
+            <div id="nombreGim">
+                <h1>MUSCLE UP</h1>
+            </div>
+
+        </div>
+    </header>
+
+    <div id="logNav">
+        <div id="login">
+            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+
+        </div>
+        <nav>
+            <ul id="navPrin">
+                <li> <a href="../html/home.html">Home</a> </li>
+                <li>Herramientas
+                    <ul id="navTools">
+                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                    </ul>
+                </li>
+                <li><a href="fisioterapeuta.html">Fisios</a></li>
+                <li><a href="actividadSala.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
+    <hr>
+    <a id="back_to_top" class="right on" href="#header">
+        <span class="fa-stack">
+            <span class="arrow_carrot-up"></span>
+        </span>
+    </a>
+
+    <div>
+        <h1>Calculadora de FCM</h1>
+        <form action="./fcm.js">
+            <label>Edad: </label><input type="number" id="edad" value=""><br>
+            <label>Sexo: </label>
+            <!--<input type="text" id="sexo" value=""> -->
+            <select name="sexo" id="sexo">
+                <option value="Hombre" selected>Hombre</option>
+                <option value="Mujer">Mujer</option>
+            </select>
+            <input type="button" src="fcm.js" onclick="calcularFCM()" value="Enviar">
+        </form>
+        <h2 id="h2"></h2>
+        <ul>
+            <li>Zona de recuperación (60% - 70%) <span id="1"></span></li>
+            <li>Zona de aeróbica (70% - 80%) <span id="2"></span></li>
+            <li>Zona de anaeróbica (80% - 90%) <span id="3"></span></li>
+            <li>Línea roja (90% - 100%) <span id="4"></span></li>
+        </ul>
+    </div>
 </body>
 
 </html>
