--- a/Gimnasio/html/imcCalculadora.html
+++ b/Gimnasio/html/imcCalculadora.html
@@ -2,8 +2,11 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="../recursos/logotipo-brazo-de-gimnasio.png">
     <title>Calculadora de IMC-Indice de masa corporal.</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/gimstile.css" />
+
     <script>
         function init() {
             var lista = document.getElementById("clasificacion");
@@ -83,8 +86,48 @@
 </head>
 
 <body>
+    <header>
+        <div id="banner">
+            <div id="logo">
+                <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
+            </div>
+            <div id="nombreGim">
+                <h1>MUSCLE UP</h1>
+            </div>
+
+        </div>
+    </header>
+
+    <div id="logNav">
+        <div id="login">
+            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+
+        </div>
+        <nav>
+            <ul id="navPrin">
+                <li> <a href="../html/home.html">Home</a> </li>
+                <li>Herramientas
+                    <ul id="navTools">
+                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                    </ul>
+                </li>
+                <li><a href="fisioterapeuta.html">Fisios</a></li>
+                <li><a href="actividadSala.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
+    <hr>
+    <a id="back_to_top" class="right on" href="#header">
+        <span class="fa-stack">
+            <span class="arrow_carrot-up"></span>
+        </span>
+    </a>
+
+
+
     <script>
-      
+
     </script>
 
     <label for="altura">Altura:&nbsp;</label>
