muchas cosas gim

--- a/Gimnasio/html/imcCalculadora.html
+++ b/Gimnasio/html/imcCalculadora.html
@@ -154,6 +154,29 @@
         <li id='obeso3'>&gt;40.00: Obeso (Tipo III)</li>
     </ul>
 
+    <footer>
+        <div id="rss">
+            <img src="../recursos/icono/rss.jpg" alt="">
+            <p>Drumbeat Blog (RSS feed)</p>
+        </div>
+        <div id="redes">
+            <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
+            <img id="fcb" src="../recursos/icono/facebook.jpg" alt="Facebook">Facebook</br>
+            <img id="flc" src="../recursos/icono/flickr.jpg" alt="Flickr">Flickr</br>
+        </div>
+
+        <div id="gim">
+            <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
+            <p>Muscle Up</p>
+            <p>Privacy policy</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
+                a <span>Creative Commons license</span>.</p>
+        </div>
+
+
+    </footer>
+
+    
 </body>
 
 </html>
