--- a/Gimnasio/html/fcmCalculadora.html
+++ b/Gimnasio/html/fcmCalculadora.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="../recursos/logotipo-brazo-de-gimnasio.png">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="../css/gimstile.css" />
     <script type="text/javascript" src="../js/gimnasio.js"></script>
 </head>
 
@@ -67,6 +69,29 @@
             <li>Línea roja (90% - 100%) <span id="4"></span></li>
         </ul>
     </div>
+
+
+    <footer>
+        <div id="rss">
+            <img src="../recursos/icono/rss.jpg" alt="">
+            <p>Drumbeat Blog (RSS feed)</p>
+        </div>
+        <div id="redes">
+            <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
+            <img id="fcb" src="../recursos/icono/facebook.jpg" alt="Facebook">Facebook</br>
+            <img id="flc" src="../recursos/icono/flickr.jpg" alt="Flickr">Flickr</br>
+        </div>
+
+        <div id="gim">
+            <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
+            <p>Muscle Up</p>
+            <p>Privacy policy</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
+                a <span>Creative Commons license</span>.</p>
+        </div>
+
+
+    </footer>
 </body>
 
 </html>
