--- a/Gimnasio/html/gimnasioHorario.html
+++ b/Gimnasio/html/gimnasioHorario.html
@@ -11,7 +11,7 @@
 </head>
 
 <body onload="crearHorario()">
- 
+
     <header>
         <div id="banner">
             <div id="logo">
@@ -50,87 +50,109 @@
         </span>
     </a>
 
+    <div>
+        <table border="1">
+            <tr>
+                <td></td>
+                <td>Lunes</td>
+                <td>Martes</td>
+                <td>Miercoles</td>
+                <td>Jueves</td>
+                <td>Viernes</td>
+                <td>Sabado</td>
+            </tr>
+            <tr id="actividad1">
+                <td>7:00 - 9:00</td>
+            </tr>
+            <tr id="actividad2">
+                <td>9:00 - 11:00</td>
+            </tr>
+            <tr id="actividad3">
+                <td>11:00 - 13:00</td>
+            </tr>
+            <tr id="actividad4">
+                <td>13:00 - 15:00</td>
+            </tr>
+            <tr id="actividad5">
+                <td>15:00 - 17:00</td>
+            </tr>
+            <tr id="actividad6">
+                <td>17:00 - 19:00</td>
+            </tr>
+            <tr id="actividad7">
+                <td>19:00 - 21:00</td>
+            </tr>
+        </table>
+        <br><br>
+        <table border="1">
+            <tr>
+                <td></td>
+                <td>Lunes</td>
+                <td>Martes</td>
+                <td>Miercoles</td>
+                <td>Jueves</td>
+                <td>Viernes</td>
+            </tr>
+            <tr id="fisio1">
+                <td>10:00 - 10:45</td>
+            </tr>
+            <tr id="fisio2">
+                <td>10:45 - 11:30</td>
+            </tr>
+            <tr id="fisio3">
+                <td>11:30 - 12:15</td>
+            </tr>
+            <tr id="fisio4">
+                <td>12:15 - 13:00</td>
+            </tr>
+            <tr id="fisio5">
+                <td>13:00 - 13:45</td>
+            </tr>
+            <tr id="descanso">
+                <td>Descanso</td>
+            </tr>
+            <tr id="fisio6">
+                <td>17:00 - 17:45</td>
+            </tr>
+            <tr id="fisio7">
+                <td>17:45 - 18:30</td>
+            </tr>
+            <tr id="fisio8">
+                <td>18:30 - 19:15</td>
+            </tr>
+            <tr id="fisio9">
+                <td>19:15 - 20:00</td>
+            </tr>
+            <tr id="fisio10">
+                <td>20:00 - 20:45</td>
+            </tr>
+        </table>
+    </div>
 
 
+    <footer>
+        <div id="rss">
+            <img src="../recursos/icono/rss.jpg" alt="">
+            <p>Drumbeat Blog (RSS feed)</p>
+        </div>
+        <div id="redes">
+            <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
+            <img id="fcb" src="../recursos/icono/facebook.jpg" alt="Facebook">Facebook</br>
+            <img id="flc" src="../recursos/icono/flickr.jpg" alt="Flickr">Flickr</br>
+        </div>
+
+        <div id="gim">
+            <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
+            <p>Muscle Up</p>
+            <p>Privacy policy</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
+                a <span>Creative Commons license</span>.</p>
+        </div>
 
 
+    </footer>
 
-    <table border="1">
-        <tr>
-            <td></td>
-            <td>Lunes</td>
-            <td>Martes</td>
-            <td>Miercoles</td>
-            <td>Jueves</td>
-            <td>Viernes</td>
-            <td>Sabado</td>
-        </tr>
-        <tr id="actividad1">
-            <td>7:00 - 9:00</td>
-        </tr>
-        <tr id="actividad2">
-            <td>9:00 - 11:00</td>
-        </tr>
-        <tr id="actividad3">
-            <td>11:00 - 13:00</td>
-        </tr>
-        <tr id="actividad4">
-            <td>13:00 - 15:00</td>
-        </tr>
-        <tr id="actividad5">
-            <td>15:00 - 17:00</td>
-        </tr>
-        <tr id="actividad6">
-            <td>17:00 - 19:00</td>
-        </tr>
-        <tr id="actividad7">
-            <td>19:00 - 21:00</td>
-        </tr>
-    </table>
-    <br><br>
-    <table border="1">
-        <tr>
-            <td></td>
-            <td>Lunes</td>
-            <td>Martes</td>
-            <td>Miercoles</td>
-            <td>Jueves</td>
-            <td>Viernes</td>
-        </tr>
-        <tr id="fisio1">
-            <td>10:00 - 10:45</td>
-        </tr>
-        <tr id="fisio2">
-            <td>10:45 - 11:30</td>
-        </tr>
-        <tr id="fisio3">
-            <td>11:30 - 12:15</td>
-        </tr>
-        <tr id="fisio4">
-            <td>12:15 - 13:00</td>
-        </tr>
-        <tr id="fisio5">
-            <td>13:00 - 13:45</td>
-        </tr>
-        <tr id="descanso">
-            <td>Descanso</td>
-        </tr>
-        <tr id="fisio6">
-            <td>17:00 - 17:45</td>
-        </tr>
-        <tr id="fisio7">
-            <td>17:45 - 18:30</td>
-        </tr>
-        <tr id="fisio8">
-            <td>18:30 - 19:15</td>
-        </tr>
-        <tr id="fisio9">
-            <td>19:15 - 20:00</td>
-        </tr>
-        <tr id="fisio10">
-            <td>20:00 - 20:45</td>
-        </tr>
-    </table>
+
 </body>
 
 </html>
